2007-07-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkcontainer.xml: Make a separate section for class methods,
	fix child property as write only. Fix bug #370936

2007-07-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkimage.xml:
	(gtk_image_new_from_file)
	(gtk_image_new_from_pixbuf)
	(gtk_image_new_from_pixmap)
	(gtk_image_new_from_image): Add, Fix #371293 

2007-03-09  Rafael Villar Burke  <pachi@rvburke.com>

	* pygtk-gtklabel.xml: Fix #41645 s/get_user_markup/get_use_markup/

2007-02-27  Rafael Villar Burke  <pachi@rvburke.com>

	* pygtk-gdkpixbuf.xml: Add missing flip method documentation
		Fix a typo s/roatate/rotate/

2007-02-15  Rafael Villar Burke  <pachi@rvburke.com>

	* pygtk2-gtkprintoperation.xml: Change variable name print with print_op
	as print is a reserved word in python

2006-10-11  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml: Remove Author info.

	* pygtk-introduction.xml: Remove Copyright and License section.

2006-08-22  Johan Dahlin  <jdahlin@async.com.br>

	* pygtk-gtkcontainer.xml (linkend): forall, spotted by 
	Tim Terlegård
	
2006-08-11  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaction.xml (set_menu_item_type, set_tool_item_type): Add.

	* pygtk-gtkwidget.xml (get_activate_signal): Add.

2006-08-06  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwidget.xml
	* pygtk-gtkcontainer.xml: Replace gobject-*-constants xrefs with
	link tags.

2006-08-03  John Finlay  <finlay@moeraki.com>

	* pygtk-gtklinkbutton.xml: Remove extra Returns:
	* pygtk-gtkstatusicon.xml: Add missing "
	Fixes #349862 (Nikos Kouremenos)

2006-07-19  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml: Add version and builddate entities.

	* pygtk-introduction.xml: Update.

2006-07-18  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreeselection.xml (set_select_function): Update description
	for 2.10 changes to enable full callback args.

	* pygtk-gtkmenu.xml (popup): Note func signature prior to 2.10.
