@@ -1,3 +1,13 @@
+2007-07-13  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* pygtk-gtktreeview.xml:
+	(gtk_tree_view_convert_widget_to_bin_window_coords)
+	(gtk_tree_view_convert_widget_to_tree_coords)
+	(gtk_tree_view_convert_tree_to_bin_window_coords)
+	(gtk_tree_view_convert_tree_to_widget_coords)
+	(gtk_tree_view_convert_bin_window_to_tree_coords)
+	(gtk_tree_view_convert_bin_window_to_widget_coords): Add.
+
 2007-07-12  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* pygtk-gtkcontainer.xml: Make a separate section for class methods,
